@@ -84,6 +84,10 @@ edited and deleted), exported and imported, used in filters and to generate pass
 <table>
 <tbody>
 <tr>
+<td align="center" width="100">n/a</td>
+<td>The default backup policy has been changed to save the last three versions of the database, instead of one.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="FR(3445820);return false;">3445820</a></td>
 <td>The Edit menu item and entry right-click context menu item "Copy Run Command to
 Clipboard" will, by default, substitute any variables within the command. To disable this,
